actualizacion ejercicio obligatorio

--- a/mati/proyecto2.ipynb
+++ b/mati/proyecto2.ipynb
@@ -78,34 +78,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "FELIPE\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "6\n",
-      "6\n"
+      "0\n",
+      "ALAIN\n"
      ]
     }
    ],
    "source": [
-    "lista_curso = ['ALAIN', 'BASTIAN', 'FELIPE', 'JOAQUÍN', 'MATÍAS'] \n",
-    "indices = list(range(len(lista_curso)))\n",
-    "n = int(input('ingresa un número del 0 al 4'))\n",
+    "lista_curso = ['ALAIN', 'BASTIAN', 'FELIPE', 'JOAQUÍN', 'MATÍAS'] #se crea la lista\n",
+    "indices = list(range(len(lista_curso))) #se le asocia un número a cada elemento de la lista y se crea una lista con dichos numeros\n",
+    "n = int(input('ingresa un número del 0 al 4')) #se crea una interaccion con el usuario para que ingrese un numero de la lista anterior\n",
     "print(n)\n",
     "\n",
-    "index = lista_curso[n]\n",
-    "print(index)\n",
-    "\n",
-    "for nombre in lista_curso:\n",
-    "    print(len(index))"
+    "index = lista_curso[n] #se llama a un elemento de la primera lista a traves del numero que ingresa el usuario\n",
+    "print(index)"
    ]
   },
   {
@@ -170,52 +162,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "tijeras\n",
-      "papel\n",
-      "1\n",
-      "han empatado\n"
+      "0\n",
+      "LA ELECCIÓN DEL USUARIO ES: piedra\n",
+      "0\n",
+      "LA ELECCIÓN DE LA COMPUTADORA ES: piedra\n",
+      "empate\n",
+      "EL NUMERO DE CARACTERES DE piedra ES: 6\n",
+      "EL NUMERO DE CARACTERES DE papel ES: 5\n",
+      "EL NUMERO DE CARACTERES DE tijeras ES: 7\n"
      ]
     }
    ],
    "source": [
     "import random\n",
     "\n",
-    "opciones_usuario = ['piedra', 'papel', 'tijeras']\n",
-    "indices_usuario = list(range(len(opciones_usuario)))\n",
-    "interaccion_usuario = int(input('ingresa un numero del 0 al 2'))\n",
-    "print(interaccion_usuario)\n",
+    "opciones_usuario = ['piedra', 'papel', 'tijeras'] #lista de opciones\n",
+    "indices_disponibles = list(range(len(opciones_usuario))) #indexado de elementos: se asocia un número a cada elemento de la lista\n",
+    "indices_usuario = int(input('ingresa un numero del 0 al 2')) #se crea una interaccion con el usuario\n",
+    "eleccion_usuario = opciones_usuario[indices_usuario] #se llama a un elemento de la primera lista a traves de un indice puesto x el usuario\n",
     "\n",
-    "index = opciones_usuario[interaccion_usuario]\n",
-    "print(index)\n",
+    "print(indices_usuario) #se imprime el indice que marca el usuario\n",
+    "print(f'LA ELECCIÓN DEL USUARIO ES: {eleccion_usuario}') #se imprime el elemento asociado al indice escogido\n",
     "\n",
-    "opciones_computadora = ['piedra', 'papel', 'tijeras']\n",
-    "indices = random.randint(0,len(opciones_computadora)-1)\n",
+    "opciones_computadora = ['piedra', 'papel', 'tijeras'] #lista de opciones iguales para la computadora y en el mismo orden\n",
+    "indices_computadora = random.randint(0,len(opciones_computadora)-1) #comando exotico que elige un indice al azar de la lista anterior\n",
     "\n",
-    "print(opciones_computadora[indices])\n",
-    "print(indices)\n",
+    "print(indices_computadora) #imprime el indice que escoge la computadora\n",
+    "print(f'LA ELECCIÓN DE LA COMPUTADORA ES: {opciones_computadora[indices_computadora]}') #imprime la eleccion explicita de la computadora\n",
     "\n",
-    "if index == 0 and indices == 1:\n",
+    "#CONTROL DE FLUJO:\n",
+    "\n",
+    "if (indices_usuario == 0) and (indices_computadora == 1):\n",
     "    print('ha ganado la computadora')\n",
-    "    if index == 0 and indices == 2:\n",
+    "    if (indices_usuario == 0) and (indices_computadora == 2):\n",
     "        print('ha ganado el usuario')\n",
-    "        if index == 1 and indices == 2:\n",
+    "        if (indices_usuario == 1) and (indices_computadora == 2):\n",
     "            print('ha ganado la computadora')\n",
-    "        elif index == 2 and indices == 1:\n",
-    "            print('ha ganado el usuario')    \n",
-    "    elif index == 2 and indices == 0:\n",
+    "        elif (indices_usuario == 2) and (indices_computadora == 1):\n",
+    "            print('ha ganado el usuario')\n",
+    "    elif (indices_usuario == 2) and (indices_computadora == 0):\n",
     "        print('ha ganado la computadora')\n",
-    "elif index == 1 and indices == 0:\n",
+    "elif (indices_usuario == 1) and (indices_computadora == 0):\n",
     "    print('ha ganado el usuario')\n",
     "else:\n",
-    "    print('han empatado')"
+    "    print('empate')\n",
+    "#DETALLE: CUALQUIER COMBINACION QUE INVOLUCRE A TIJERAS SALE EMPATE ????\n",
+    "\n",
+    "for elemento in opciones_usuario:\n",
+    "    print(f'EL NUMERO DE CARACTERES DE {elemento} ES:', len(elemento))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(indices_usuario)\n",
+    "print(indices_computadora)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "piedra\n"
+     ]
+    }
+   ],
+   "source": [
+    "opciones_usuario = ['piedra', 'papel', 'tijeras'] #lista de opciones\n",
+    "indices_disponibles = list(range(len(opciones_usuario))) #indexado de elementos: se asocia un número a cada elemento de la lista\n",
+    "indices_usuario = int(input('ingresa un numero del 0 al 2')) #se crea una interaccion con el usuario\n",
+    "eleccion_usuario = opciones_usuario[indices_usuario] #se llama a un elemento de la primera lista a traves de un indice\n",
+    "\n",
+    "print(indices_usuario) #se imprime el indice que marca el usuario\n",
+    "print(eleccion_usuario) #se imprime el elemento asociado al indice escogido"
    ]
   },
   {
