--- a/mati/proyecto1.ipynb
+++ b/mati/proyecto1.ipynb
@@ -1112,17 +1112,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "FELIPE\n",
-      "Tu nombre tiene justo 6 caracteres\n",
-      "tu nombre puede estar en la siguiente sublista: ['FELIPE', 'MATIAS']\n"
+      "0\n",
+      "ALAIN\n",
+      "Tu nombre posee menos de 6 caracteres.\n",
+      "tu nombre puede estar en la siguiente sublista: ['ALAIN']\n"
      ]
     }
    ],
@@ -1443,7 +1443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.15"
   },
   "orig_nbformat": 4,
   "vscode": {
