--- a/mati/proyecto2.ipynb
+++ b/mati/proyecto2.ipynb
@@ -29,11 +29,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n",
-      "10\n",
-      "10\n",
-      "10\n",
-      "10\n"
+      "0 10\n",
+      "1 10\n",
+      "2 10\n",
+      "3 10\n",
+      "4 10\n"
      ]
     }
    ],
@@ -41,7 +41,7 @@
     "n = int(input('Coloca un valor'))\n",
     "numeros = list(range(n+1))\n",
     "for nro in numeros:\n",
-    "    print(sum(numeros))\n",
+    "    print(nro, sum(numeros))\n",
     "    if nro < 0:\n",
     "        break"
    ]
@@ -55,7 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The result is 3\n"
+      "The result is 10\n"
      ]
     }
    ],
@@ -102,17 +102,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
-      "tijeras\n",
-      "tijeras\n",
-      "2\n",
+      "1\n",
+      "papel\n",
+      "papel\n",
+      "1\n",
       "HAN ELEGIDO DISTINTAS OPCIONES\n"
      ]
     }
@@ -142,6 +142,25 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "papel\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(index)\n",
+    "print(indices)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
@@ -162,24 +181,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0\n",
-      "LA ELECCIÓN DEL USUARIO ES: piedra\n",
-      "0\n",
-      "LA ELECCIÓN DE LA COMPUTADORA ES: piedra\n",
-      "empate\n",
-      "EL NUMERO DE CARACTERES DE piedra ES: 6\n",
-      "EL NUMERO DE CARACTERES DE papel ES: 5\n",
-      "EL NUMERO DE CARACTERES DE tijeras ES: 7\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -213,10 +217,22 @@
     "    print('ha ganado el usuario')\n",
     "else:\n",
     "    print('empate')\n",
-    "#DETALLE: CUALQUIER COMBINACION QUE INVOLUCRE A TIJERAS SALE EMPATE ????\n",
-    "\n",
+    "#DETALLE: CUALQUIER COMBINACION QUE INVOLUCRE A TIJERAS SALE EMPATE ????"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "for elemento in opciones_usuario:\n",
-    "    print(f'EL NUMERO DE CARACTERES DE {elemento} ES:', len(elemento))"
+    "    if indices_usuario == 0:\n",
+    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
+    "    elif indices_usuario == 1:\n",
+    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
+    "    else:\n",
+    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))"
    ]
   },
   {
