--- a/clases/class_2/clase_2.ipynb
+++ b/clases/class_2/clase_2.ipynb
@@ -2417,11 +2417,312 @@
    "source": [
     "El elemento cambió porque le pasamos una referencia de la lista a la función. NO una copia de esta."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2\n",
+    "from test import *\n",
+    "import os"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Juego de espías (Fácil)\n",
+    "El espía Ramsay debe codificar los mensajes que le mandan otros espías sobre la cantidad de tropas que tiene el enemigo en distintos cuarteles. Para esto, otro espía le manda una tira de números con un pequeño truco. Esta tira de números estan separados por `-`, pero para que no sea tan fácil saber que esta informando, la cantidad de tropas esta levemente escondida y también esta escondido el número del cuartel. El cuartel estará escondido en el último lugar de la tira y para obtener la cantidad de tropas aproximadas se deben sumar todos los números que son divisibles por el número del cuartel de la tira. Crear una función que reciba el string de la tira de números y devuelva la cantidad de tropas que hay en el cuartel enemigo como una tupla. Adicionalmente, podria imprimir un mensaje con la información requerida.\n",
+    "\n",
+    "Ej:\n",
+    "```Python\n",
+    "INPUT:\n",
+    "tira_numeros = '29-32-1-5-65-12345-0-12-2'\n",
+    "OUTPUT: \n",
+    "(2, 44)\n",
+    "    \"En el cuartel número 2 hay 44 soldados\"\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Corre para ver si tu código esta bien\n",
+    "def informe_espia(tira_numeros):\n",
+    "    # Hacer la magia\n",
+    "    \n",
+    "    return (cuartel,informe)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test1(informe_espia)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### Codificador César (Intermedio)\n",
+    "Una de las formas mas antiguas de crear un código encriptado es lo que se conoce como el encriptado César <https://es.wikipedia.org/wiki/Cifrado_C%C3%A9sar>. En este tipo de encriptado lo que se hace es \"girar\" el abecedario una determinada cantidad de pasos según una clave numérica (ver ejemplo). Crear una función que lea un string dentro de un txt en la misma ruta que esta notebook, tome una clave y devuelva el string encriptado con la clave César en *minúsculas* (asumir que el texto esta en castellano).\n",
+    "\n",
+    "Ej: Clave = 2\n",
+    "\n",
+    "| Letra   | Letra encriptada |\n",
+    "| ------------- |:-------------:| \n",
+    "| A | C | \n",
+    "| B | D |\n",
+    "| C | E |\n",
+    "| ... | ... |\n",
+    "| Y | A |\n",
+    "| Z | B |\n",
+    "\n",
+    "```Python\n",
+    "INPUT:\n",
+    "'mi_archivo.txt' (\"Hola estudiante\"), clave = 1\n",
+    "OUTPUT:\n",
+    "\"Jqnc guvwfkcovg\"\n",
+    "```\n",
+    "\n",
+    "*AYUDA*\n",
+    "\n",
+    "El método `mi_lista.index(elemento)` búsca el `elemento` en la lista `mi_lista` y devuelve la posición del elemento si lo encontró. Si no lo encontró devuelve un `ValueError`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def codificador_cesar(mensaje_path, clave):\n",
+    "    # Un ayudin\n",
+    "    abecedario = 'abcdefghijklmnñopqrstuvwxyz'\n",
+    "    # Ahora hagan su magia (ojo con las mayúsculas)\n",
+    "\n",
+    "    return cifrado"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test2(codificador_cesar)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**OPCIONALES** \n",
+    "\n",
+    "- Hacer que la función guarde la salida como un archivo de texto.\n",
+    "- Podemos encriptar respetando mayúsculas. Adaptar la función para que lo haga. Se puede usar la funcion test2_mayusculas para probarla. Sugerencia: Mirar el método `isupper()` para los strings.\n",
+    "- Adaptar la función anterior pero para desencriptar, una función que cree una lista con todas las posibles rotaciones del texto."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "### La calesita (Rompecoco) \n",
+    "El señor Jacinto es dueño de una antigua calesita con animalitos que no funciona hace varios años y quiere volver a ponerla en funcionamiento. Para eso va a probarla prendiendola y viendo cuanto rota segun la cantidad de movimientos. \n",
+    "\n",
+    "Crear una función que reciba una lista de strings (con la primera en mayúscula) con los animales que componen la calesita, una cantidad de ciclos(n_ciclos) y devuelva la misma lista pero rotada hacia la derecha esa cantidad de movimientos, donde un movimiento es cambiar todos los animales una posición hacia la derecha:\n",
+    "\n",
+    "Ej:\n",
+    "``` Python\n",
+    "INPUT:\n",
+    "['Unicornio','Oso','Jirafa', 'Pato'. 'Elefante'], movimiento = 1\n",
+    "OUTPUT:\n",
+    "['Elefante', 'Unicornio', 'Oso', 'Jirafa', 'Pato']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def probar_calesita(calesita, n_movimientos):\n",
+    "    # Proba la calesita\n",
+    "    return calesita_girada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test3(probar_calesita)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Cuando prueba la calesita se da cuenta que es muy lenta. Debe sacar uno de los animales para que pueda funcionar correctamente. Para eso los manda a pesar y le dicen cual es el que hay que sacar para que funcione perfectamente.\n",
+    "\n",
+    "Modificar la función anterior para que reciba un string, que es un animal en MAYÚSCULAS (animal_quitar) para sacar y pruebe la función nuevamente.\n",
+    "\n",
+    "Ej:\n",
+    "```Python\n",
+    "INPUT:\n",
+    "['Unicornio','Oso','Jirafa', 'Pato'. 'Elefante'], animal_quitar = 'JIRAFA', movimientos = 1\n",
+    "OUTPUT:\n",
+    "['Elefante', 'Unicornio', 'Oso', 'Pato']\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def probar_calesita_arreglada(calesita, n_mov, animal_quitar):\n",
+    "    # Arregla la calesita\n",
+    "    \n",
+    "    return calesita_arreglada"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "test4(probar_calesita_arreglada)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivos_directorio = os.listdir('publicaciones')\n",
+    "print(archivos_directorio)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "La función listdir nos devuelve una lista con todos los archivos que están en la carpeta publicaciones. Noten que solamente nos devuelve los nombres de los archivos, no la ruta completa que necesitamos para acceder a los mismos desde la ubicación en el filesystem donde se encuentra esta notebook.\n",
+    "\n",
+    "Las rutas hasta los archivos cambian con el sistema operativo, por eso si están en Windows, la forma de acceder al archivo Yukon Delta Salmon Management.txt es ejercicios\\\\Yukon Delta Salmon Management.txt mientras que si están en Linux o Unix la forma de acceder es ejercicios/Yukon Delta Salmon Management.txt .  Para evitar problemas y que el código sea ejecutable desde cualquier sistema operativo, el módulo os tiene la función os.join.\n",
+    "\n",
+    "Entonces para crear las rutas vamos a usar la función os.path.join y para esto es ideal una lista por comprensión"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rutas_archivos = [os.path.join('publicaciones',archivo) for archivo in archivos_directorio]\n",
+    "rutas_archivos"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora vamos a unir estas dos listas del mismo tamaño en una lista de tuplas utilizando la función \"zip\" de Python nativo. Como el zip de Python devuelve un objeto iterable, vamos a convertirlo en lista para trabajar mejor"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tuplas_archivos = list(zip(rutas_archivos,archivos_directorio))\n",
+    "for tupla in tuplas_archivos:\n",
+    "    print(tupla)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ahora sí, vamos a pedirles que creen una función que reciba una tupla con la ruta y el nombre del archivo. Necesitamos que esta función cuente las palabras que hay en el txt que se encuentra en esa ruta y luego imprima el nombre del archivo y la cantidad. \n",
+    "Después vamos a escribir un for loop que recorra la lista tuplas_archivos y devuelve una tupla con el nombre del archivo y la cantidad de palabras. Desde el loop for vamos a imprimir esa tupla."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1. Escribir la función "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2. Recorrer en un loop tuplas_archivos invocando a la función"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Entonces ¿Cuáles superan las 250 palabras? Si quieren ir una milla extra modifiquen la función para que devuelva True si supera y False si no supera en lugar de devolver la cantidad. \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 3. Modifiquen la función\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 4. Vuelvan a llamarla"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "analitica",
    "language": "python",
    "name": "python3"
   },
@@ -2435,7 +2736,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.15 (main, Nov 24 2022, 14:39:17) [MSC v.1916 64 bit (AMD64)]"
   },
   "nbTranslate": {
    "displayLangs": [
@@ -2497,7 +2798,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "a04f5d07b0747026a8fbcdf50b9443318e69b1b8bd6247d88bfadb4789282972"
+    "hash": "4e0ad5cd685f605243be6d7c3fe64241640606e353ead897f9e91cb65cb92c21"
    }
   }
  },
