--- a/mati/proyecto2.ipynb
+++ b/mati/proyecto2.ipynb
@@ -22,17 +22,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 10\n",
-      "1 10\n",
-      "2 10\n",
-      "3 10\n",
       "4 10\n"
      ]
     }
@@ -41,9 +37,10 @@
     "n = int(input('Coloca un valor'))\n",
     "numeros = list(range(n+1))\n",
     "for nro in numeros:\n",
-    "    print(nro, sum(numeros))\n",
+    "    \n",
     "    if nro < 0:\n",
-    "        break"
+    "        break\n",
+    "print(nro, sum(numeros))"
    ]
   },
   {
@@ -102,18 +99,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n",
-      "papel\n",
-      "papel\n",
-      "1\n",
-      "HAN ELEGIDO DISTINTAS OPCIONES\n"
+      "0\n",
+      "piedra\n",
+      "tijeras\n",
+      "2\n"
+     ]
+    },
+    {
+     "ename": "AssertionError",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp\\ipykernel_19372\\2916653733.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     15\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 17\u001b[1;33m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindex\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     18\u001b[0m \u001b[1;32massert\u001b[0m \u001b[0misinstance\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mindices\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mint\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAssertionError\u001b[0m: "
      ]
     }
    ],
@@ -133,6 +140,9 @@
     "\n",
     "print(opciones_computadora[indices])\n",
     "print(indices)\n",
+    "\n",
+    "assert isinstance(index,int) #PA TESTEAR\n",
+    "assert isinstance(indices,int) \n",
     "\n",
     "if index != indices:\n",
     "    print('HAN ELEGIDO DISTINTAS OPCIONES')\n",
@@ -181,9 +191,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "LA ELECCIÓN DEL USUARIO ES: tijeras\n",
+      "0\n",
+      "LA ELECCIÓN DE LA COMPUTADORA ES: piedra\n",
+      "empate\n"
+     ]
+    }
+   ],
    "source": [
     "import random\n",
     "\n",
@@ -203,6 +225,11 @@
     "\n",
     "#CONTROL DE FLUJO:\n",
     "\n",
+    "if indices_usuario == indices_computadora:\n",
+    "    print('empate')\n",
+    "\n",
+    "else:\n",
+    "    \n",
     "if (indices_usuario == 0) and (indices_computadora == 1):\n",
     "    print('ha ganado la computadora')\n",
     "    if (indices_usuario == 0) and (indices_computadora == 2):\n",
@@ -226,13 +253,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for elemento in opciones_usuario:\n",
-    "    if indices_usuario == 0:\n",
-    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
-    "    elif indices_usuario == 1:\n",
-    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
-    "    else:\n",
-    "        print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))"
+    "#QUIERO QUE AL ELEGIR UNA OPCIÓN, PYTHON CUENTE CUANTOS CARACTERES TIENE TAL OPCION"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "EL NUMERO DE CARACTERES DE TU ELECCIÓN ES piedra ES: 6\n",
+      "EL NUMERO DE CARACTERES DE TU ELECCIÓN ES papel ES: 5\n",
+      "EL NUMERO DE CARACTERES DE TU ELECCIÓN ES tijeras ES: 7\n"
+     ]
+    }
+   ],
+   "source": [
+    "if eleccion_usuario == piedra:\n",
+    "    print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
+    "if eleccion_usuario == :\n",
+    "    print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))\n",
+    "else:\n",
+    "    print(f'EL NUMERO DE CARACTERES DE TU ELECCIÓN ES {elemento} ES:', len(elemento))"
    ]
   },
   {
@@ -302,7 +347,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
