--- a/mati/ejercicio_4_github.ipynb
+++ b/mati/ejercicio_4_github.ipynb
@@ -204,17 +204,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[24, 0, 1, 33, 80]\n",
-      "[0, 1, 24, 33, 80]\n",
-      "80\n",
-      "0\n"
+      "[5, 3, 4, 2, 1]\n",
+      "[1, 2, 3, 4, 5]\n",
+      "5\n",
+      "1\n"
      ]
     }
    ],
@@ -287,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
